Fixed burger btn issue on small devices

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,8 @@ body {
 
 @media screen and (max-width: 728px) {
   .nav-container {
-    width: 100vw;
+    margin: 0;
+    max-width: 100vw;
   }
 }
 
